5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/3119/executions/1595_842.log
== TEST (2019-03-21 17:21:45) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

n = int(input("Digite os numeros: "))

a = num // 1000
b = (num // 100) % 10
c = (num // 10) % 10
d = num % 10

s = a + b + c + d

print(s)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    a = num // 1000
NameError: name 'num' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 17:22:04) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

n = int(input("Digite os numeros: "))

a = n // 1000
b = (n // 100) % 10
c = (n // 10) % 10
d = n % 10

s = a + b + c + d

print(s)

-- OUTPUT:
20
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 17:22:11) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

n = int(input("Digite os numeros: "))

a = n // 1000
b = (n // 100) % 10
c = (n // 10) % 10
d = n % 10

s = a + b + c + d

print(s)

-- EXECUTION TIME:
0.17851
-- TEST CASE 1:
---- input:
9173
---- correct output:
20
---- user output:
20
-- TEST CASE 2:
---- input:
1010
---- correct output:
2
---- user output:
2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
